trying to fix jumping background on section offer

--- a/sass/main2.scss
+++ b/sass/main2.scss
@@ -471,7 +471,7 @@ section:nth-of-type(odd) {
 
 section.offer,
 section.contact {
-    height: 1px;
+    height: 100vh;
 
     .moving {
         height: 80%;
